--- a/simple-payments/package.json
+++ b/simple-payments/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "build": "node_modules/.bin/tsc",
     "test": "node_modules/.bin/cucumber-js"
   },
   "devDependencies": {
