--- a/banky-bank/package.json
+++ b/banky-bank/package.json
@@ -4,22 +4,23 @@
 	"main": "dist/main.js",
 	"license": "MIT",
 	"scripts": {
-		"try": "./node_modules/.bin/tsc && node ./dist/app.js"
+		"build": "rimraf ./dist && ./node_modules/.bin/tsc",
+		"start": "./node_modules/.bin/tsc && node ./dist/app.js",
+		"test": "jest"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.0",
 		"@types/jest": "^24.0.13",
 		"@types/node": "^12.0.7",
 		"dotenv": "^8.0.0",
 		"eslint": "^5.16.0",
-		"jest-cucumber": "^2.0.11",
+		"jest": "^24.9.0",
+		"jest-cucumber": "2.0.11",
 		"moxios": "^0.4.0",
 		"prettier": "^1.18.2",
-		"ts-jest": "^24.0.2",
-		"typescript": "^3.7.4"
+		"ts-jest": "24.2.0",
+		"typescript": "3.7.4"
 	},
 	"dependencies": {
-		"big.js": "^5.2.2",
-		"winston": "^3.2.1"
+		"winston": "3.2.1"
 	}
 }
