--- a/banky-bank/.gitignore
+++ b/banky-bank/.gitignore
@@ -1,19 +1,26 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+.npmrc
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+/dist
+
+# misc
 .DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-node_modules/*
-dist/*
-
-*.log
-**/*.log
-*.tmp
-**/*.tmp
-
-.sonarlint
-.sonarlint/*
-
-.DS_Store
-
-node_modules
-**/node_modules
-dist
-**/dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
