--- a/banky-bank/tsconfig.json
+++ b/banky-bank/tsconfig.json
@@ -34,7 +34,7 @@
 
 		/* Additional Checks */
 		"noUnusedLocals": false,
-		"noUnusedParameters": true,
+		"noUnusedParameters": false,
 		// "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
